# ks-systems-hardware

./: .env.example  .envrc  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MARKETING.md  Makefile  PLAN_PSU.md  README.md  SPEC.md  TASK.md  TASKS.md  TASKS.refactor.md  TASK_MINI_NAS.md  cadeng.yaml  flake.nix  mini-nas.scad  mini.scad  plan.md  pr.md  pyproject.toml  review.md  test.scad  test_anchor.py  test_import.py
.claude/: settings.json
.deepwork/tmp/: engineering_issue.md
.gemini/hooks/: after_agent.sh
.github/workflows/: ci.yml  copilot-setup-steps.yml
assemblies/: component_viewer.scad  gpu.scad  gpu_aio.scad  minimal.scad  nas_2disk.scad  nas_many.scad  pico.scad  pico_bottomshell.scad  pico_topshell.scad
modules/: CLAUDE.md  case.scad  cpu_cooler.scad  motherboard.scad
modules/case/: dimensions.scad  dimensions_minimal.scad  dimensions_pico.scad
modules/components/: cpu_cooler.scad  cpu_cooler_nh_l9.scad  gpu.scad  motherboard.scad  pcie_riser.scad  ram.scad
modules/util/: honeycomb.scad  info_embosser.scad
spikes/dovetailed-shell/: SPEC.md  dimensions.scad
src/: config.py  registry.py
src/assemblies/: pico.py  tower.py
src/components/: case_pico.py  case_sfx.py  case_tower.py  dovetail.py  frame.py  latch.py  mocks.py
tests/: base_assembly_dovetail.scad  base_assembly_dovetail_pico.scad  hardware_components_dimensions_test.py  lib_migration_test.py  test_heatsink_gap.py  test_lfs_s3_setup.sh  test_pico_dimensions.py  test_pico_heatsink_height.py  test_pico_hinge_tophat.py  test_tower_dimensions.py  test_vslot.py
(+93 files in other folders)
